patch lines
