# data/return_reason.js
@@ -1,0 +1,39 @@
+'use strict';
+var Mockgen = require('./mockgen.js');
+/**
+ * Operations on /return_reason
+ */
+module.exports = {
+    /**
+     * summary: standard response for key value lists
+     * description: 
+     * parameters: 
+     * produces: 
+     * responses: 200, default
+     * operationId: getKeyValueList
+     */
+    get: {
+        200: function (req, res, callback) {
+            /**
+             * Using mock data generator module.
+             * Replace this by actual data for the api.
+             */
+            Mockgen().responses({
+                path: '/return_reason',
+                operation: 'get',
+                response: '200'
+            }, callback);
+        },
+        default: function (req, res, callback) {
+            /**
+             * Using mock data generator module.
+             * Replace this by actual data for the api.
+             */
+            Mockgen().responses({
+                path: '/return_reason',
+                operation: 'get',
+                response: 'default'
+            }, callback);
+        }
+    }
+};
